v0.6.0-unreleased
  - Resolve complicated dependency issues
  - Resolve change of function return type (if function can be dropped)
  - Fixes fundamental logic error in pgsqlUpdateFragile
    Without --perimit-data-deletion upgrades would not create objects etc.
  - Fixes constraints in schema public are not deleted
v0.5.0
  - Adds proper deletion of obsolete functions
  - Changes to no data deletion as default for upgrades
v0.4.1
  - First release used in production